<resources>
    <string name="app_name">TMDBApp</string>
    <string name="first_air_date">Fecha de salida</string>
    <string name="number_of_seasons">Número de temporadas</string>
    <string name="creators">Creado por</string>
    <string name="homepage">Página principal</string>
    <string name="genres">Géneros</string>
    <string name="no_creators">Creadores no encontrados</string>
    <string name="no_genres">Géneros no encontrados</string>
    <string name="no_serie_name">Nombre de la serie no encontrado</string>
</resources>